ucon overlaping fixed

--- a/style.css
+++ b/style.css
@@ -928,7 +928,7 @@ body {
   font-size: 20px;
   color: rgb(255, 255, 255);
   position: relative;
-  z-index: 1;
+  z-index: 0;
   animation: idleBounce 2s infinite;
 }
 
